// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/Table compact 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Table
        className=""
        compact={true}
        emptyMessage="No entries found."
      >
        <table
          className="root compact"
        >
          <TBody>
            <tbody>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c1
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c2
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c3
                    </td>
                  </Td>
                </tr>
              </Tr>
            </tbody>
          </TBody>
        </table>
      </Table>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Table default 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Table
        className=""
        compact={false}
        emptyMessage="No entries found."
      >
        <table
          className="root"
        >
          <TBody>
            <tbody>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c1
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c2
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c3
                    </td>
                  </Td>
                </tr>
              </Tr>
            </tbody>
          </TBody>
        </table>
      </Table>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Table empty 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Table
        className=""
        compact={false}
        emptyMessage="No entries found."
      >
        <div
          className="root empty"
        >
          No entries found.
        </div>
      </Table>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Table empty with custom element 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Table
        className=""
        compact={false}
        emptyMessage={
          <p
            style={
              Object {
                "outline": "1px solid lightgray",
              }
            }
          >
            No items available
          </p>
        }
      >
        <div
          className="root empty"
        >
          <p
            style={
              Object {
                "outline": "1px solid lightgray",
              }
            }
          >
            No items available
          </p>
        </div>
      </Table>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Table with custom content and attributes 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Table
        className=""
        compact={false}
        emptyMessage="No entries found."
      >
        <table
          className="root"
        >
          <THead>
            <thead>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                       
                    </th>
                  </Th>
                  <Th
                    className=""
                    style={
                      Object {
                        "textAlign": "right",
                      }
                    }
                  >
                    <th
                      className="cell"
                      style={
                        Object {
                          "textAlign": "right",
                        }
                      }
                    >
                      Col A (right)
                    </th>
                  </Th>
                  <Th
                    className=""
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    <th
                      className="cell"
                      style={
                        Object {
                          "textAlign": "center",
                        }
                      }
                    >
                      Col B (center)
                    </th>
                  </Th>
                  <Th
                    className=""
                    style={
                      Object {
                        "textDecoration": "underline",
                      }
                    }
                  >
                    <th
                      className="cell"
                      style={
                        Object {
                          "textDecoration": "underline",
                        }
                      }
                    >
                      Col C(undefiner)
                    </th>
                  </Th>
                </tr>
              </Tr>
            </thead>
          </THead>
          <TBody>
            <tbody>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      <strong>
                        row 1
                      </strong>
                    </th>
                  </Th>
                  <Td
                    className=""
                    style={
                      Object {
                        "textAlign": "right",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "textAlign": "right",
                        }
                      }
                    >
                      a1
                    </td>
                  </Td>
                  <Td
                    className=""
                    style={
                      Object {
                        "color": "red",
                        "textAlign": "center",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "color": "red",
                          "textAlign": "center",
                        }
                      }
                    >
                      b1
                    </td>
                  </Td>
                  <Td
                    className=""
                    style={
                      Object {
                        "textDecoration": "underline",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "textDecoration": "underline",
                        }
                      }
                    >
                      c1
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
                style={
                  Object {
                    "color": "blue",
                    "fontSize": "1.5em",
                  }
                }
              >
                <tr
                  className="row"
                  style={
                    Object {
                      "color": "blue",
                      "fontSize": "1.5em",
                    }
                  }
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      <strong>
                        row 2
                      </strong>
                    </th>
                  </Th>
                  <Td
                    className=""
                    style={
                      Object {
                        "textAlign": "right",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "textAlign": "right",
                        }
                      }
                    >
                      a2
                    </td>
                  </Td>
                  <Td
                    className=""
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "textAlign": "center",
                        }
                      }
                    >
                      b2
                    </td>
                  </Td>
                  <Td
                    className=""
                    style={
                      Object {
                        "textDecoration": "underline",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "textDecoration": "underline",
                        }
                      }
                    >
                      c2
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      <strong>
                        row 3
                      </strong>
                    </th>
                  </Th>
                  <Td
                    className=""
                    style={
                      Object {
                        "textAlign": "right",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "textAlign": "right",
                        }
                      }
                    >
                      a3
                    </td>
                  </Td>
                  <Td
                    className=""
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "textAlign": "center",
                        }
                      }
                    >
                      b3
                    </td>
                  </Td>
                  <Td
                    className=""
                    style={
                      Object {
                        "textDecoration": "underline",
                      }
                    }
                  >
                    <td
                      className="cell"
                      style={
                        Object {
                          "textDecoration": "underline",
                        }
                      }
                    >
                      c3
                    </td>
                  </Td>
                </tr>
              </Tr>
            </tbody>
          </TBody>
        </table>
      </Table>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Table with headers 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Table
        className=""
        compact={false}
        emptyMessage="No entries found."
      >
        <table
          className="root"
        >
          <THead>
            <thead>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      Col A
                    </th>
                  </Th>
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      Col B
                    </th>
                  </Th>
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      Col C
                    </th>
                  </Th>
                </tr>
              </Tr>
            </thead>
          </THead>
          <TBody>
            <tbody>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c1
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c2
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c3
                    </td>
                  </Td>
                </tr>
              </Tr>
            </tbody>
          </TBody>
        </table>
      </Table>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Table with multiple rows header 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Table
        className=""
        compact={false}
        emptyMessage="No entries found."
      >
        <table
          className="root"
        >
          <THead>
            <thead>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                       
                    </th>
                  </Th>
                  <Th
                    className=""
                    colSpan={2}
                  >
                    <th
                      className="cell"
                      colSpan={2}
                    >
                      Colspan
                    </th>
                  </Th>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      Col A
                    </th>
                  </Th>
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      Col B
                    </th>
                  </Th>
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      Col C
                    </th>
                  </Th>
                </tr>
              </Tr>
            </thead>
          </THead>
          <TBody>
            <tbody>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c1
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c2
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c3
                    </td>
                  </Td>
                </tr>
              </Tr>
            </tbody>
          </TBody>
        </table>
      </Table>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Table with row headers 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Table
        className=""
        compact={false}
        emptyMessage="No entries found."
      >
        <table
          className="root"
        >
          <TBody>
            <tbody>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      row 1
                    </th>
                  </Th>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b1
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c1
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      row 2
                    </th>
                  </Th>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b2
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c2
                    </td>
                  </Td>
                </tr>
              </Tr>
              <Tr
                className=""
              >
                <tr
                  className="row"
                >
                  <Th
                    className=""
                  >
                    <th
                      className="cell"
                    >
                      row 3
                    </th>
                  </Th>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      a3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      b3
                    </td>
                  </Td>
                  <Td
                    className=""
                  >
                    <td
                      className="cell"
                    >
                      c3
                    </td>
                  </Td>
                </tr>
              </Tr>
            </tbody>
          </TBody>
        </table>
      </Table>
    </div>
  </Router>
</MemoryRouter>
`;
